# chore-tracker

./: .pre-commit-config.yaml  pyproject.toml
app/: main.py
app/api/v1/: chores.py  completion.py
app/core/: config.py  logging.py
app/db/: __init__.py  tables.py
app/models/: core.py
app/services/: __init__.py  core.py
