[project]
name = "chore-tracker"
version = "0.1.0"
description = "Backend service for tracking regular chores"
authors = [
    {name = "natleahh",email = "a.l.tengbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlmodel (>=0.0.31,<0.0.32)"
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
