[project]
name = "chore-tracker"
version = "0.1.0"
description = "Backend service for tracking regular chores"
authors = [
    {name = "natleahh",email = "a.l.tengbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel (>=0.0.31,<0.0.32)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.13"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true